@@ -736,6 +736,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 #define cSetting_gradient_spacing           544
 #define cSetting_gradient_symmetry          545
 #define cSetting_ray_trace_color            546
+#define cSetting_group_arrow_prefix         547
 
 /* when you add a new setting also remember:
    layer1/Setting.c
@@ -745,7 +746,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       547
+#define cSetting_INIT                       548
 
 #endif
 
